# pressio-linalg

./: .gitignore  CMakeLists.txt  DESCRIPTION.rst  README.md  setup.py
.github/workflows/: publish_pypi_package.yaml  test.yaml
pressiolinalg/: __init__.py  linalg.py  test_utils.py  utils.py
pybind11/include/pybind11/: numpy.h
src/: main_binder.cc
tests/: test_basic_mean_via_python.py  test_basic_min_max_via_python.py  test_basic_std_via_python.py  test_basic_svd_method_of_snapshots_via_python.py  test_bindings.py  test_utils.py
tests/distributed/: test_basic_A_transpose_dot_b_via_python.py  test_basic_max_via_python.py  test_basic_mean_via_python.py  test_basic_min_max_via_python.py  test_basic_product_via_python.py  test_basic_svd_method_of_snapshots_via_python.py
